Continue work - channel.html

--- a/bs3/index.html
+++ b/bs3/index.html
@@ -52,6 +52,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/respond.js"></script>
+    <script src="js/iourl.js"></script>
     <script src="js/index-page.js"></script>
   </body>
 </html>
