--- a/bs3/channel.html
+++ b/bs3/channel.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Calvin 'calzoneman 'cyzon' Montgomery">
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/navbar-footer.css" rel="stlyesheet">
+    <link href="css/navbar-footer.css" rel="stylesheet">
+    <link href="css/cytube.css" rel="stylesheet">
   </head>
   <body>
     <div id="wrap">
@@ -56,32 +57,42 @@
           <div id="leftpane" class="col-lg-5">
             <div id="leftpane-inner" class="row">
               <div id="pollbtnwrap" class="col-lg-12">
-                <button id="newpollbtn" class="btn btn-small btn-default">New Poll</button>
+                <button id="newpollbtn" class="btn btn-sm btn-default">New Poll</button>
               </div>
               <div id="pollwrap" class="col-lg-12"></div>
               <div id="searchwrap" class="col-lg-12">
-                <div id="searchpanel" class="panel panel-default">
-                  <div class="panel-heading"><a id="librarytoggle" href="javascript:void(0)">Library/YouTube Search</a></div>
-                  <div id="librarywrap" class="panel-body">
-                    <div class="row">
-                      <div id="querywrap" class="col-lg-6">
-                        <input id="library_query" type="text" class="form-control">
-                      </div>
-                      <div id="searchbtns" class="col-lg-6 btn-group">
-                        <button id="library_search" class="btn btn-default">Library</button>
-                        <button id="youtube_search" class="btn btn-default">YouTube</button>
-                      </div>
+                <div id="searchpanel-group" class="panel-group">
+                  <div id="searchpanel" class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#searchpanel-group" href="#librarywrap" class="accordion-toggle">Library/YouTube Search</a></h4>
                     </div>
-                    <ul id="library" class="videolist col-lg-12"></ul>
+                    <div id="librarywrap" class="panel-body">
+                      <div class="row">
+                        <div id="querywrap" class="col-lg-6">
+                          <input id="library_query" type="text" class="form-control">
+                        </div>
+                        <div id="searchbtns" class="col-lg-6 btn-group">
+                          <button id="library_search" class="btn btn-default">Library</button>
+                          <button id="youtube_search" class="btn btn-default">YouTube</button>
+                        </div>
+                      </div>
+                      <ul id="library" class="videolist col-lg-12"></ul>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div id="userpltogglewrap" class="panel panel-default">
-                <div class="panel-heading"><a id="userpltoggle" href="javascript:void(0)">Playlist Manager</a></div>
-                <div id="userplaylistwrap" class="panel-body">
-                  <div class="row">
-                    <div class="col-lg-7">
-                      <input id="userpl_name" type="text" placeholder="Playlist Name" class="form-control">
+              <div id="playlistmanagerwrap" class="col-lg-12">
+                <div id="playlistmanagerpanel" class="panel panel-default">
+                  <div class="panel-heading"><a id="userpltoggle" href="javascript:void(0)">Playlist Manager</a></div>
+                  <div id="userplaylistwrap" class="panel-body">
+                    <div class="row">
+                      <div class="col-lg-7">
+                        <input id="userpl_name" type="text" placeholder="Playlist Name" class="form-control">
+                      </div>
+                      <div class="col-lg-5">
+                        <button id="userpl_save" class="btn btn-block btn-default">Save Playlist</button>
+                      </div>
+                      <ul id="userpl_list" class="col-lg-12"></ul>
                     </div>
                   </div>
                 </div>
@@ -89,10 +100,33 @@
             </div>
           </div>
           <div id="rightpane" class="col-lg-7">
-            <div id="rightpane-inner" class="row"></div>
+            <div id="rightpane-inner" class="row">
+              <div id="qualitywrap" class="col-lg-12">
+                <div class="dropdown btn-group">
+                  <button id="qdrop" data-toggle="dropdown" class="btn btn-sm btn-default dropdown-toggle">Quality<b class="caret"></b></button>
+                  <ul role="menu" aria-labelledby="qdrop" class="dropdown-menu">
+                                      <li role="presentation"><a id="quality_auto" role="menuitem" href="javascript:void(0)">Quality: Auto</a></li>
+                                      <li role="presentation"><a id="quality_240p" role="menuitem" href="javascript:void(0)">240p</a></li>
+                                      <li role="presentation"><a id="quality_360p" role="menuitem" href="javascript:void(0)">240p</a></li>
+                                      <li role="presentation"><a id="quality_480p" role="menuitem" href="javascript:void(0)">240p</a></li>
+                                      <li role="presentation"><a id="quality_720p" role="menuitem" href="javascript:void(0)">240p</a></li>
+                                      <li role="presentation"><a id="quality_1080p" role="menuitem" href="javascript:void(0)">240p</a></li>
+                  </ul>
+                </div>
+                <button id="mediarefresh" class="btn btn-sm btn-default">Refresh Media</button>
+              </div>
+              <div id="queue_align2"></div>
+              <div id="plcontrolsouterwrap" class="col-lg-12">
+                <div id="plcontrolspanel" class="panel panel-default">
+                  <div class="panel-heading"><a id="playlisttoggle" href="javascript:void(0)">Show Playlist Controls</a></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
