--- a/bs3/channel.html
+++ b/bs3/channel.html
@@ -298,6 +298,68 @@
                   </div>
                 </form>
               </div>
+              <div id="permedit" class="col-lg-12"></div>
+              <div id="filteredit" class="col-lg-12">
+                <h3>Chat Filters</h3>
+                <p>
+                  Filters will be processed in the order that they are listed here.
+                  Click and drag a row to rearrange the order.  Click a regex, flags, or
+                  replacement field to edit a filter inline.
+                </p><strong>Add Filter</strong>
+                <form role="form" action="javascript:void(0)" class="form-horizontal">
+                  <div class="form-group">
+                    <label for="newfilter_name" class="col-lg-3 control-label">Name</label>
+                    <div class="col-lg-3">
+                      <input id="newfilter_name" type="text" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="newfilter_regex" class="col-lg-3 control-label">Regular Expression</label>
+                    <div class="col-lg-3">
+                      <input id="newfilter_regex" type="text" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="newfilter_flags" class="col-lg-3 control-label">Flags</label>
+                    <div class="col-lg-3">
+                      <input id="newfilter_flags" type="text" placeholder="g" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="newfilter_replace" class="col-lg-3 control-label">Replacement</label>
+                    <div class="col-lg-3">
+                      <input id="newfilter_replace" type="text" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="newfilter_filterlinks" class="col-lg-3 control-label">Filter Links</label>
+                    <div class="col-lg-3">
+                      <div class="checkbox">
+                        <input id="newfilter_filterlinks" type="checkbox">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="newfilter_submit" class="col-lg-3 control-label">Create Filter</label>
+                    <div class="col-lg-3">
+                      <button id="newfilter_submit" class="btn btn-sm btn-primary">Create</button>
+                    </div>
+                  </div>
+                </form>
+                <table class="table table-striped table-condensed">
+                  <thead>
+                    <tr>
+                      <th>Delete</th>
+                      <th>Name</th>
+                      <th>Regex</th>
+                      <th>Flags</th>
+                      <th>Replacement</th>
+                      <th>Affects Links</th>
+                      <th>Active</th>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
             </div>
           </div>
         </div>
