--- a/bs3/channel.html
+++ b/bs3/channel.html
@@ -180,187 +180,7 @@
         </div>
         <div id="channelsettingswrap-outer" class="row">
           <div id="channelsettingswrap-inner" class="col-lg-12">
-            <div id="channelsettingswrap" class="well">
-              <script src="js/modoptions.js"></script>
-              <button id="hide_settings" class="pull-right close">&times;</button>
-              <div class="dropup btn-group">
-                <button id="moddrop" data-toggle="dropdown" class="btn btn-sm btn-default dropdown-toggle">Moderator Settings<b class="caret"></b></button>
-                <ul role="menu" aria-labelledby="moddrop" class="dropdown-menu">
-                                  <li role="presentation" id="optedit_tab"><a id="show_optedit" role="menuitem" href="javascript:void(0)">Channel Options</a></li>
-                                  <li role="presentation" id="permedit_tab"><a id="show_permedit" role="menuitem" href="javascript:void(0)">Permissions</a></li>
-                                  <li role="presentation" id="motdedit_tab"><a id="show_motdedit" role="menuitem" href="javascript:void(0)">MOTD Editor</a></li>
-                                  <li role="presentation" id="filteredit_tab"><a id="show_filteredit" role="menuitem" href="javascript:void(0)">Chat Filters</a></li>
-                                  <li role="presentation" id="cssedit_tab"><a id="show_cssedit" role="menuitem" href="javascript:void(0)">CSS Editor</a></li>
-                                  <li role="presentation" id="jsedit_tab"><a id="show_jsedit" role="menuitem" href="javascript:void(0)">JS Editor</a></li>
-                                  <li role="presentation" id="banlist_tab"><a id="show_banlist" role="menuitem" href="javascript:void(0)">Ban List</a></li>
-                                  <li role="presentation" id="channelranks_tab"><a id="show_channelranks" role="menuitem" href="javascript:void(0)">Channel Ranks</a></li>
-                                  <li role="presentation" id="loginhistory_tab"><a id="show_loginhistory" role="menuitem" href="javascript:void(0)">Recent Connections</a></li>
-                                  <li role="presentation" id="chanlog_tab"><a id="show_chanlog" role="menuitem" href="javascript:void(0)">Channel Log</a></li>
-                </ul>
-              </div>
-              <hr>
-              <div id="optedit" class="col-lg-12">
-                <h3>Channel Options</h3>
-                <form role="form" action="javascript:void(0)" class="form-horizontal">
-                  <!-- Prevent chat flood-->
-                  <div class="form-group">
-                    <label for="opt_chat_antiflood" class="col-lg-3 control-label">Prevent Chat Flood</label>
-                    <div class="col-lg-3">
-                      <div class="checkbox">
-                        <input id="opt_chat_antiflood" type="checkbox">
-                      </div>
-                    </div>
-                  </div>
-                  <!-- convert URLs to links-->
-                  <div class="form-group">
-                    <label for="opt_enable_link_regex" class="col-lg-3 control-label">Convert URLs in chat to links</label>
-                    <div class="col-lg-3">
-                      <div class="checkbox">
-                        <input id="opt_enable_link_regex" type="checkbox">
-                      </div>
-                    </div>
-                  </div>
-                  <!-- voteskip toggle-->
-                  <div class="form-group">
-                    <label for="opt_allow_voteskip" class="col-lg-3 control-label">Allow Voteskip</label>
-                    <div class="col-lg-3">
-                      <div class="checkbox">
-                        <input id="opt_allow_voteskip" type="checkbox">
-                      </div>
-                    </div>
-                  </div>
-                  <!-- voteskip ratio-->
-                  <div class="form-group">
-                    <label for="opt_voteskip_ratio" class="col-lg-3 control-label">Voteskip Ratio</label>
-                    <div class="col-lg-3">
-                      <input id="opt_voteskip_ratio" type="text" placeholder="0.5" class="form-control">
-                    </div>
-                  </div>
-                  <!-- max video length-->
-                  <div class="form-group">
-                    <label for="opt_maxlength" class="col-lg-3 control-label">Maximum Video Length</label>
-                    <div class="col-lg-3">
-                      <input id="opt_maxlength" type="text" placeholder="HH:MM:SS" class="form-control">
-                    </div>
-                  </div>
-                  <!-- auto afk-->
-                  <div class="form-group">
-                    <label for="opt_afktimeout" class="col-lg-3 control-label">Auto AFK Delay (0 to disable)</label>
-                    <div class="col-lg-3">
-                      <input id="opt_afktimeout" type="text" placeholder="0" class="form-control">
-                    </div>
-                  </div>
-                  <hr>
-                  <h3>Admin-Only Options</h3>
-                  <!-- page title-->
-                  <div class="form-group">
-                    <label for="opt_pagetitle" class="col-lg-3 control-label">Page Title</label>
-                    <div class="col-lg-3">
-                      <input id="opt_pagetitle" type="text" placeholder="CyTube" class="form-control">
-                    </div>
-                  </div>
-                  <!-- external css-->
-                  <div class="form-group">
-                    <label for="opt_externalcss" class="col-lg-3 control-label">External CSS</label>
-                    <div class="col-lg-3">
-                      <input id="opt_externalcss" type="text" placeholder="Stylesheet URL" class="form-control">
-                    </div>
-                  </div>
-                  <!-- external javascript-->
-                  <div class="form-group">
-                    <label for="opt_externaljs" class="col-lg-3 control-label">External JS</label>
-                    <div class="col-lg-3">
-                      <input id="opt_externaljs" type="text" placeholder="Script URL" class="form-control">
-                    </div>
-                  </div>
-                  <!-- show publicly-->
-                  <div class="form-group">
-                    <label for="opt_show_public" class="col-lg-3 control-label">List Channel Publicly</label>
-                    <div class="col-lg-3">
-                      <div class="checkbox">
-                        <input id="opt_show_public" type="checkbox">
-                      </div>
-                    </div>
-                  </div>
-                  <!-- unregister-->
-                  <div class="form-group">
-                    <label for="chanopts_unregister" class="col-lg-3 control-label">Unregister Channel</label>
-                    <div class="col-lg-3">
-                      <button id="chanopts_unregister" class="btn btn-sm btn-danger">Drop Channel</button>
-                    </div>
-                  </div>
-                  <!-- submit-->
-                  <div class="form-group">
-                    <label for="chanopts_submit" class="col-lg-3 control-label">Save Changes</label>
-                    <div class="col-lg-3">
-                      <button id="chanopt_submit" class="btn btn-sm btn-primary">Save</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div id="permedit" class="col-lg-12"></div>
-              <div id="filteredit" class="col-lg-12">
-                <h3>Chat Filters</h3>
-                <p>
-                  Filters will be processed in the order that they are listed here.
-                  Click and drag a row to rearrange the order.  Click a regex, flags, or
-                  replacement field to edit a filter inline.
-                </p><strong>Add Filter</strong>
-                <form role="form" action="javascript:void(0)" class="form-horizontal">
-                  <div class="form-group">
-                    <label for="newfilter_name" class="col-lg-3 control-label">Name</label>
-                    <div class="col-lg-3">
-                      <input id="newfilter_name" type="text" class="form-control">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="newfilter_regex" class="col-lg-3 control-label">Regular Expression</label>
-                    <div class="col-lg-3">
-                      <input id="newfilter_regex" type="text" class="form-control">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="newfilter_flags" class="col-lg-3 control-label">Flags</label>
-                    <div class="col-lg-3">
-                      <input id="newfilter_flags" type="text" placeholder="g" class="form-control">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="newfilter_replace" class="col-lg-3 control-label">Replacement</label>
-                    <div class="col-lg-3">
-                      <input id="newfilter_replace" type="text" class="form-control">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="newfilter_filterlinks" class="col-lg-3 control-label">Filter Links</label>
-                    <div class="col-lg-3">
-                      <div class="checkbox">
-                        <input id="newfilter_filterlinks" type="checkbox">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="newfilter_submit" class="col-lg-3 control-label">Create Filter</label>
-                    <div class="col-lg-3">
-                      <button id="newfilter_submit" class="btn btn-sm btn-primary">Create</button>
-                    </div>
-                  </div>
-                </form>
-                <table class="table table-striped table-condensed">
-                  <thead>
-                    <tr>
-                      <th>Delete</th>
-                      <th>Name</th>
-                      <th>Regex</th>
-                      <th>Flags</th>
-                      <th>Replacement</th>
-                      <th>Affects Links</th>
-                      <th>Active</th>
-                    </tr>
-                  </thead>
-                </table>
-              </div>
-            </div>
+            <div id="channelsettingswrap" class="well"></div>
           </div>
         </div>
         <div id="resizewrap" class="row">
