Start working on porting JS

--- a/bs3/channel.html
+++ b/bs3/channel.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap-theme.css" rel="stylesheet">
     <link href="css/navbar-footer.css" rel="stylesheet">
     <link href="css/cytube.css" rel="stylesheet">
+    <link href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
   </head>
   <body>
     <div id="wrap">
@@ -196,8 +197,15 @@
       </div>
     </div>
     <script src="js/jquery.js"></script>
+    <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/respond.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/iourl.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/paginator.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/callbacks.js"></script>
   </body>
 </html>
