Continue working on bs3

--- a/bs3/channel.html
+++ b/bs3/channel.html
@@ -35,8 +35,12 @@
       </div>
       <div id="mainpage" class="container">
         <div id="toprow" class="row">
-          <div id="motdwrap" class="col-lg-12">
-            <div id="motd" class="well"></div>
+          <div class="col-lg-12">
+            <div id="motdwrap" class="well">
+              <button id="togglemotd" type="button" class="close pull-right"><span class="glyphicon glyphicon-minus"></span></button>
+              <div id="motd"></div>
+              <div class="clear"></div>
+            </div>
           </div>
           <div id="drinkbarwrap" class="col-lg-12">
             <div id="drinkbar">
