That's enough for one night

--- a/bs3/channel.html
+++ b/bs3/channel.html
@@ -20,6 +20,7 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="https://github.com/calzoneman/sync/wiki/Beginner%27s-Guide-and-FAQ" target="_blank">Help</a></li>
             <li><a href="account.html">Account</a></li>
+            <li><a href="javascript:showOptionsMenu()">Options</a></li>
           </div>
           <form id="loginform" action="javascript:void(0)" class="navbar-form navbar-right">
             <div class="form-group">
