Fix options modal

--- a/bs3/useroptions.html
+++ b/bs3/useroptions.html
@@ -1,29 +1,28 @@
+
 <div class="modal-header">
-  <button class="close" data-dismiss="modal" aria-hidden="true">
-    &times;
-  </button>
-  <h3>User Options</h3>
+  <button data-dismiss="modal" aria-hidden="true" class="close">&times;</button>
+  <h4 class="modal-title">User Options</h4>
   <div class="btn-group">
-    <button class="btn btn-small" id="uopt-btn-general">General</button>
-    <button class="btn btn-small" id="uopt-btn-playback">Playback</button>
-    <button class="btn btn-small" id="uopt-btn-chat">Chat</button>
-    <button class="btn btn-small" id="uopt-btn-mod">Moderator</button>
+    <button id="uopt-btn-general" class="btn btn-xs btn-default">General</button>
+    <button id="uopt-btn-playback" class="btn btn-xs btn-default">Playback</button>
+    <button id="uopt-btn-chat" class="btn btn-xs btn-default">Chat</button>
+    <button id="uopt-btn-mod" class="btn btn-xs btn-default">Moderator</button>
   </div>
 </div>
 <div class="modal-body">
-  <div class="uopt-panel" id="uopt-panel-general">
+  <div id="uopt-panel-general" class="uopt-panel">
     <h4>General Options</h4>
   </div>
-  <div class="uopt-panel" id="uopt-panel-playback">
+  <div id="uopt-panel-playback" class="uopt-panel">
     <h4>Playback Options</h4>
   </div>
-  <div class="uopt-panel" id="uopt-panel-chat">
+  <div id="uopt-panel-chat" class="uopt-panel">
     <h4>Chat Options</h4>
   </div>
-  <div class="uopt-panel" id="uopt-panel-mod">
+  <div id="uopt-panel-mod" class="uopt-panel">
     <h4>Moderator Options</h4>
   </div>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary pull-right" id="uopt-btn-save">Save</button>
+  <button id="uopt-btn-save" class="btn btn-sm btn-primary pull-right">Save</button>
 </div>
